RESOLVED FIXED257756
REGRESSION(264706@main): [ macOS ] TestWebKitAPI.WebKit.AutoFillAvailable is a constant timeout.
https://bugs.webkit.org/show_bug.cgi?id=257756
Summary REGRESSION(264706@main): [ macOS ] TestWebKitAPI.WebKit.AutoFillAvailable is ...
Bri Harris
Reported 2023-06-06 11:35:17 PDT
TestWebKitAPI.WebKit.AutoFillAvailable is a constant timeout on macOS. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.AutoFillAvailable
Attachments
Patch (5.05 KB, patch)
2023-07-19 14:18 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-06-06 11:35:36 PDT
EWS
Comment 2 2023-06-23 15:04:37 PDT
Test gardening commit 265484@main (3acf1fdd307e): <https://commits.webkit.org/265484@main> Reviewed commits have been landed. Closing PR #15266 and removing active labels.
Andres Gonzalez
Comment 3 2023-07-19 14:18:56 PDT
EWS
Comment 4 2023-07-20 07:16:42 PDT
Committed 266179@main (4e977f1f8fe1): <https://commits.webkit.org/266179@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467075 [details].
Note You need to log in before you can comment on or make changes to this bug.