Cherry-pick 4e977f1f8fe1. rdar://problem/113605089

REGRESSION(264706@main): [ macOS ] TestWebKitAPI.WebKit.AutoFillAvailable is a constant timeout.
    https://bugs.webkit.org/show_bug.cgi?id=257756
    rdar://110336197

    Reviewed by Chris Fleizach.

    This test was timing out because it invokes [AutoFillAvailable webProcessPlugIn:didCreateBrowserContextController:] that calls WKAccessibilityFocusedObject, that in turn calls WebKit::WebProcess::accessibilityUIElement. The latter cannot be called this early in creating the page and crashes, thus causing the test to time out.
    To avoid this problem and still use WebProcess::accessibilityFocusedUIElement in the accessibility layout tests, this patch reverts the change in 264706@main to WKAccessibilityFocusedObject. Instead, added WKAccessibilityFocusedUIElement to be used by WTR::AccessibilityController on Mac.

    * Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
    (WKAccessibilityFocusedObject):
    (WKAccessibilityFocusedUIElement):
    * Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:
    * Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityControllerMac.mm:
    (WTR::AccessibilityController::focusedElement):

    Canonical link: https://commits.webkit.org/266179@main

Identifier: 265870.326@safari-7616-branch